src/test/resources/regression/xlang/error/SpecEffects6.scala
import leon.lang._

object SpecEffects6 {

  def bar(): Unit = {
    var i = 0
    assert({
      i += 1
      i == 1
    })
  }

}
